--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Stylesalvaje - Ropa Urbana</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header>
@@ -47,12 +51,12 @@
             <div class="category-grid">
                 <div class="category-item">
                     <img src="img/Naruto.jpg" alt="Camisetas">
-                    <h3>Camisetas</h3>
+                    <h3>Oversize Print</h3>
                     <a href="#" class="btn-small">Ver más</a>
                 </div>
                 <div class="category-item">
                     <img src="img/2.jpg" alt="Pantalones">
-                    <h3>Pantalones</h3>
+                    <h3>Conjunto Tigger Print</h3>
                     <a href="#" class="btn-small">Ver más</a>
                 </div>
                 <div class="category-item">
@@ -74,21 +78,21 @@
                 <!-- Producto 1 -->
                 <div class="product-card">
                     <img src="img/6.jpg" alt="Camiseta Grafiti">
-                    <h3>Camiseta Grafiti</h3>
+                    <h3>Polera Monckey</h3>
                     <p class="price">$29.99</p>
                     <button class="add-to-cart" data-id="1" data-name="Camiseta Grafiti" data-price="29.99">Añadir al carrito</button>
                 </div>
                 <!-- Producto 2 -->
                 <div class="product-card">
                     <img src="img/1.jpg" alt="Jeans Rotos">
-                    <h3>Jeans Rotos</h3>
+                    <h3>Conjunto Print</h3>
                     <p class="price">$49.99</p>
                     <button class="add-to-cart" data-id="2" data-name="Jeans Rotos" data-price="49.99">Añadir al carrito</button>
                 </div>
                 <!-- Producto 3 -->
                 <div class="product-card">
-                    <img src="img/3.jpg" alt="Zapatos Urbanos">
-                    <h3>Zapatos Urbanos</h3>
+                    <img src="img/9.jpg" alt="Zapatos Urbanos">
+                    <h3>polera animal Print</h3>
                     <p class="price">$79.99</p>
                     <button class="add-to-cart" data-id="3" data-name="Zapatos Urbanos" data-price="79.99">Añadir al carrito</button>
                 </div>
@@ -142,7 +146,7 @@
                     <p><i class="fas fa-envelope"></i> info@stylesalvaje.com</p>
                     <div class="social-media">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/stylo_salvaje_shop?igsh=MXRic3Vodm50dGhoNA=="><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-tiktok"></i></a>
                     </div>
